<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityAddNewTrip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".mytrip.AddNewTripActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="TripName"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/prompt_trip_name"
                android:inputType="text"
                android:maxLines="1"
                android:popupBackground="#FFFFFF"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                tools:targetApi="lollipop" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/EventImage"
                android:src="@drawable/ic_event" />

            <TextView
                android:id="@+id/sdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="?attr/editTextBackground"
                android:hint="@string/prompt_start_date"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp" />

        </LinearLayout>
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/LocationImage"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/select_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="?attr/editTextBackground"
                android:hint="@string/prompt_city_name"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp" />

        </LinearLayout>
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tripplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:background="?attr/editTextBackground"
                android:hint="Select Place"
                android:textColor="?attr/editTextColor" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="선택"
                android:textColor="#ffffff"
                android:onClick="showDatePickerDialog"
                android:id="@+id/btn_place"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/prompt_add_trip"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>