<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coursethumbnail"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/CourseTitle"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#edecec"
                android:padding="8dp"
                android:text="@string/Category"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail2"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail3"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail4"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail5"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail6"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail7"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail8"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail9"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coursethumbnail10"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/FoodCourseImage"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvdescription10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>